--- a/config/shadowsocks/conf/pdnsd.conf
+++ b/config/shadowsocks/conf/pdnsd.conf
@@ -1,13 +1,13 @@
 global {
-	perm_cache=4096;
-	cache_dir="/tmp";
+	perm_cache=off;
+	cache_dir="/tmp/pdnsd";
 #	pid_file = /var/run/pdnsd.pid;
 	run_as="root";
 	server_port = 5353;
 	status_ctl = on;
 	query_method=tcp_only;
-	min_ttl=1d; 
-	max_ttl=1w;  
+#	min_ttl=1d; 
+#	max_ttl=1w;  
 	timeout=5;  
 	neg_domain_pol=on;
 	udpbufsize=1024; 
